Init, Base for stations parser

--- a/app_bot/locales/ru/LC_MESSAGES/messages.po
+++ b/app_bot/locales/ru/LC_MESSAGES/messages.po
@@ -109,7 +109,7 @@ msgstr "Приветственное сообщение + ссылка на ви
 
 
 msgid "FIO_INPUT"
-msgstr "1️⃣ имя"
+msgstr "Введите ФИО"
 
 
 
@@ -118,7 +118,7 @@ msgstr "2️⃣ напишите свою электронную почту"
 
 
 msgid "PHONE_INPUT"
-msgstr "3️⃣ нажмите на кнопку ниже и вы успешно зарегистрированы!\n\n(кнопка поделиться контактом)"
+msgstr "Нажмите на кнопку ниже или введите телефон для завершение регистрации зарегистрированы!"
 
 
 msgid "REGISTERED"
@@ -181,7 +181,6 @@ msgstr "Данные введены верно?\n\n"
 
 "<b>ФИО:</b> {fio}\n"
 "<b>Телефон:</b> {phone}\n"
-"<b>Почта:</b> {email}\n"
 
 
 msgid "QUESTION_FROM_USER"
