Add inline_mode for stations

--- a/app_bot/locales/ru/LC_MESSAGES/messages.po
+++ b/app_bot/locales/ru/LC_MESSAGES/messages.po
@@ -186,3 +186,9 @@ msgstr "Данные введены верно?\n\n"
 msgid "QUESTION_FROM_USER"
 msgstr "<b>ℹ️ Вопрос от пользователя {username}</b>\n\n"
 "{question}"
+
+
+msgid "INPUT_STATION"
+msgstr "1. Начните вводить адрес в формате (текст копируется при нажатии) <code>@{bot_username} г. Москва,</code>\n"
+"2. Над строкой ввода появится список предложенных АЗС\n"
+"3. Продолжайте вводить адрес по формату или выберите АЗС из списка, нажав на нее"
