Add admin panel

--- a/app_bot/locales/ru/LC_MESSAGES/messages.po
+++ b/app_bot/locales/ru/LC_MESSAGES/messages.po
@@ -197,6 +197,6 @@ msgstr "<b>ℹ️ Вопрос от пользователя {username}</b>\n\n"
 
 
 msgid "INPUT_STATION"
-msgstr "1. Начните вводить адрес в формате (текст копируется при нажатии) <code>@{bot_username} г. Москва,</code>\n"
+msgstr "1. Начните вводить адрес в формате (текст копируется при нажатии) <code>@{bot_username}</code> ул. Ленина\n"
 "2. Над строкой ввода появится список предложенных АЗС\n"
 "3. Продолжайте вводить адрес по формату или выберите АЗС из списка, нажав на нее"
